<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"

    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/loginbg"
        android:layout_width="match_parent"
        android:layout_height="244dp"
        android:src="@drawable/bglogin">

    </ImageView>

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/txtv"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/txtv2"
        android:textSize="20sp"
        android:textStyle="normal" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#ABCBDA"
        app:cardCornerRadius="7dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="90dp">

            <EditText
                android:id="@+id/txtlogin"
                android:layout_width="298dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:hint="@string/txtedt1"

                android:ems="11"
                android:inputType="textEmailAddress"
                android:minHeight="40dp" />


            <EditText
                android:id="@+id/txtpassword"
                android:layout_width="298dp"
                android:layout_height="60dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:ems="11"
                android:hint="@string/txtedt2"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:autofillHints=""
                tools:ignore=""/>

            <TextView
                android:id="@+id/Fgtpswd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/txtv3"
                android:textStyle="bold">

            </TextView>

            <Button
                android:id="@+id/btnlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:text="@string/btntxt"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtv4"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="45dp"
            android:adjustViewBounds="true"
            android:src="@drawable/google" />


        <TextView
            android:id="@+id/viaGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txtv5"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <Button
        android:id="@+id/Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:text="@string/btntxt2"
        android:textSize="20sp"
        android:textStyle="bold">

    </Button>


</LinearLayout>